<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appspy</string>

    <string name="hello_world">Hello world!</string>


    <!-- ########################################################################################################### -->
    <!-- Main Activity -->
    <string name="show_rights">Show the rights</string>
    <string name="show_usage_permission_settings">Grant permission</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_db_title">Database options</string>


    <!-- ########################################################################################################### -->
    <!--Database Activity-->
    <string name="title_activity_database">Database options</string>

    <string name="removeTempFile">Remove temp files</string>



    <!-- ########################################################################################################### -->
    <!-- Settings Activity -->

    <string name="action_settings">Settings</string>


    <string name="background_services">Background Services</string>
    <string name="pref_background_services_summ">The background services are the services that monitor what is happening
        on the device.</string>

    <string name="pref_gps_freq_title">GPS Frequency</string>
    <string name="pref_gps_freq_summ">This is how often Appspy will record your position. The lower is the interval, the more the battery will be drained</string>
    <string name="pref_gps_freq_dia_title">GPS update frequency</string>

    <string-array name="pref_gps_freq_entries">
        <item>30 seconds</item>
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_gps_freq_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1200</item>
        <item>1800</item>
    </string-array>

    <string name="pref_gps_freq_default">30</string>
    <string name="settings_group_title">General settings</string>


    <!-- ########################################################## -->
    <!-- PREF KEYS-->
    <string name="pref_key_background_services">background_services_key</string>
    <string name="pref_key_gps_freq">gps_freq_key</string>



    <!-- ########################################################################################################### -->
    <!--GRAPH ACTIVITY-->
    <string name="button_to_list_apps_title">Show all time installed apps</string>

    <string name="title_activity_rights">Database options</string>
    <string name="title_activity_graph">GraphActivity</string>

    <!-- ########################################################################################################### -->
    <!--LIST APPS ACTIVITY-->
    <string name="title_activity_apps_list">AppsListActivity</string>


</resources>
